rust/node-merge/tests/snapshots/diff__text1=text3.snap
---
source: rust/node-merge/tests/diff.rs
expression: "diff(&files_content, \"text1\", \"text3\").await?"
---
art_1111111B.hea_11111112               Article:content.0.Heading:level                   Heading:level  "1"
art_1111111B.hea_11111112.txt_11111111  Article:content.0.Heading:content.0.Text:value    Text:value     "title"
art_1111111B.pgh_11111114.txt_11111113  Article:content.1.Paragraph:content.0.Text:value  Text:value     "text"
art_1111111B.pgh_11111116.txt_11111115  Article:content.2.Paragraph:content.0.Text:value  Text:value     "more text"
art_1111111B.hea_11111118               Article:content.3.Heading:level                   Heading:level  "2"
art_1111111B.hea_11111118.txt_11111117  Article:content.3.Heading:content.0.Text:value    Text:value     "subtitle"
art_1111111B.pgh_1111111A.txt_11111119  Article:content.4.Paragraph:content.0.Text:value  Text:value     "subtext"

art_1111111E.hea_11111112                            Article:content.0.Heading:level                                      Heading:level  "1"
art_1111111E.hea_11111112.txt_11111111               Article:content.0.Heading:content.0.Text:value                       Text:value     "title"
art_1111111E.pgh_11111114.txt_11111113               Article:content.1.Paragraph:content.0.Text:value                     Text:value     "text"
art_1111111E.pgh_11111119.txt_11111115               Article:content.2.Paragraph:content.0.Text:value                     Text:value     "more "
art_1111111E.pgh_11111119.emp_11111117.txt_11111116  Article:content.2.Paragraph:content.1.Emphasis:content.0.Text:value  Text:value     "emphasized"
art_1111111E.pgh_11111119.txt_11111118               Article:content.2.Paragraph:content.2.Text:value                     Text:value     " text"
art_1111111E.hea_1111111B                            Article:content.3.Heading:level                                      Heading:level  "2"
art_1111111E.hea_1111111B.txt_1111111A               Article:content.3.Heading:content.0.Text:value                       Text:value     "subtitle"
art_1111111E.pgh_1111111D.txt_1111111C               Article:content.4.Paragraph:content.0.Text:value                     Text:value     "subtext"

DiffOp       Old range    New range
Equal        0..1         0..1
Equal        1..2         1..2
Equal        2..3         2..3
Delete       3..4         6..6
Insert       3..3         3..6
Equal        4..5         6..7
Equal        5..6         7..8
Equal        6..7         8..9

Remove(Article:content.2.Paragraph:content.0.Text:value)
Add((Article:content.2.Paragraph:content.0.Text:value, "more "))
Add((Article:content.2.Paragraph:content.1.Emphasis:content.0.Text:value, "emphasized"))
Add((Article:content.2.Paragraph:content.2.Text:value, " text"))
